# Emitter

./: .coveragerc  .gitignore  .mypy  .travis.yml  LICENSE  README.md  error.html  index.html  setup.cfg
docs/: README.md  errors.md  generate.py
emitter/: __init__.py  _context.py  _emit.py  _global.py  _on.py  _remove.py  _retrieve.py  _types.py  _wait.py  error.py  errors.py
emitter/_helpers/: __init__.py  _loop.py  _namespace.py  _parse_scope.py  contextvars.py  get_running_loop.py  limit_scope.py  loop.py  new_listener_mapping.py  retrieve_listeners_from_namespace.py  retrieve_loop_from_listener.py
tests/: test_emitter.py  test_import.py
