## More info:
# https://setuptools.readthedocs.io/en/latest/setuptools.html
# https://packaging.python.org/guides/distributing-packages-using-setuptools
# https://www.python.org/dev/peps/pep-0345/#metadata-version

[venv]
extras =
    dev
    docs
    tests

[metadata]
url = https://github.com/HeavenVolkoff/emitter
name = emitter
author = Vítor Vasconcellos
version = 0.17.0
license = BSD-3-Clause
keywords =
    async
    event
    asyncio
    reactor
    emitter
    proactor
    dispatch
maintainer = Vítor Vasconcellos
description = Async-aware event emitter for Python
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    # https://pypi.org/pypi?%3Aaction=list_classifiers
download_url =
project_urls =
    Bug Tracker = https://github.com/HeavenVolkoff/emitter/issues
    Source Code = https://github.com/HeavenVolkoff/emitter
author_email = vasconcellos.dev@gmail.com
maintainer_email = vasconcellos.dev@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
# str
packages = find:
    # Indicates which packages should be included in this module
    # find: and find_namespace: will automatically find all packages
# bool
zip_safe = True
    # Indicates whether your package is able to be run from within a zip archive or not
# list-semi
setup_requires =
    pip >= 18.1, != 19.0
    setuptools >= 40.5.0
    # List all packages required in order to run your package's setup.py
# str
python_requires = >3.6
    # Define the required python interpreter version to run you package
# list-semi
install_requires =
    typing_extensions >= 3.7.4.1
    importlib_metadata >= 1.5.0
    aiocontextvars; python_version < '3.7'
    # List your packages dependencies
# bool
include_package_data = False
    # Automatically include in your package any data file declared inside MANIFEST.in
    # If possible, it is recommended to use package_data and exclude_package_data instead

# Put data files inside package
[options.package_data]
* = py.typed
# package_name = files_pattern, ...

# Custom options for automatic package search
[options.packages.find]
exclude =
    tests

# Extra dependencies, can be installed with: `pip install package[extra]`
[options.extras_require]
# extra_name = requirements, ...
dev =
    twine
    black
    isort
    venvtools
    # Put your development requirements here
docs =
    pdoc3
    # Put your documentation requirements here
tests =
    codecov
    coverage
    asynctest
    # Put your tests requirements here

